--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ PG_HOST =
 PG_DATABASE =
 PG_PASSWORD =
 
-DATABASE_URL =
+DATABASE_URL = "postgresql://${PG_USER}:${PG_PASSWORD}@${PG_HOST}:5432/${PG_DATABASE}?schema=public"
 
 # KEY
 ACCESS_TOKEN_SECRET =
